session5/network/auth.yml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: auth
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
  - issuer: https://dev-lohika.auth0.com/
    jwksUri: https://dev-lohika.auth0.com/.well-known/jwks.json
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: auth
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: DENY
  rules:
    - from:
        - source:
            notRequestPrincipals: ["*"]
